--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "pinia": "^2.0.24",
     "ts-md5": "^1.3.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
