--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 jwt.secret=iot.technology
-authenticate-url=/authenticate
-register-url=/user/register
+open.urls=/authenticate,/student/register
+open.roles=student,admin
