--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,23 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
+    "@vitejs/plugin-vue": "^4.1.0",
     "axios": "^1.1.3",
+    "element-plus": "^2.3.1",
+    "md-editor-v3": "^2.11.0",
     "pinia": "^2.0.24",
+    "scratch-components": "https://github.com/nesteiner/scratch-components",
     "ts-md5": "^1.3.1",
+    "vite": "^4.2.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "typescript": "~4.5.5"
+    "typescript": "^5.0.2",
+    "vue-tsc": "^1.2.0"
   },
   "browserslist": [
     "> 1%",
