--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,6 +14,7 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
+      "vite/client",
       "webpack-env"
     ],
     "paths": {
@@ -33,8 +34,10 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
+    "vite.config.ts"
   ],
+
   "exclude": [
     "node_modules"
   ]
